# experimentkit

./: .gitignore  README.md  pyproject.toml
configs/: iris_baseline.yaml
src/experimentkit/: cli.py
src/experimentkit/core/: config.py  plotting.py  reporting.py  runner.py  tracking.py
