[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "experimentkit"
version = "0.1.0"
description = "Reproducible experiment & evaluation toolkit (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",]

[project.scripts]
exp = "experimentkit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

